Converted project into a static library. Renamed libwpd.c to wpd.c to reflect the library change. Fixed up some broken headers.

--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -644,6 +644,7 @@ LIB@&t@OBJS
 EGREP
 GREP
 CPP
+LIBTOOL_DEPS
 am__fastdepCC_FALSE
 am__fastdepCC_TRUE
 CCDEPMODE
@@ -3473,6 +3474,9 @@ fi
 
 
 
+AC_PROG_LIBTOOL
+
+AC_LTDL_DLLIB
 # Checks for libraries.
 
 # Checks for header files.
